src/containers/MainContent/MainContent.css
.container {
  height: 95vh;
  box-sizing: border-box;
  overflow: visible;
  background-color: tomato;
}

.img {
  position: absolute;
  height: 100%;
  margin: auto;
  left: 0;
  right: 0;
  text-align: center;
  border-width: 15px;
}
.vidContainer {
  width: 100vw;
  height: calc(100% - 120px);
  padding: 0;
  margin: 0;
  /* background-color: lavender; */
}

.vid {
  min-height: 300px;
  max-width: 100%;
  max-height: 100%;
}

/* slide 7 360 comparison classes */
.comparison360Right {
  position: absolute;
  height: 100%;
  width: 50%;
  right: 0;
}

.comparison360Left {
  position: absolute;
  height: 100%;
  width: 50%;
  left: 0;
}

.iframe360 {
  height: 90%;
  background-color: khaki;
}

